--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+# Flask==2.3.3
+# Flask-MySQLdb==1.0.1
+# Werkzeug==2.3.7
+# mysqlclient==2.2.0
+# python-dotenv==1.0.0
+# pymysql==1.1.0
+# python-dateutil==2.8.2
+# uuid==1.30
 Flask==2.3.3
 Flask-MySQLdb==1.0.1
 Werkzeug==2.3.7
@@ -5,4 +13,4 @@ mysqlclient==2.2.0
 python-dotenv==1.0.0
 pymysql==1.1.0
 python-dateutil==2.8.2
-uuid==1.30
+gunicorn==21.2.0
